RESOLVED FIXED 49126
RenderBlock::positionForPoint is not writing-mode-aware.
https://bugs.webkit.org/show_bug.cgi?id=49126
Summary RenderBlock::positionForPoint is not writing-mode-aware.
Dave Hyatt
Reported 2010-11-05 22:56:23 PDT
RenderBlock::positionForPoint is not writing-mode-aware.
Attachments
Patch (154.94 KB, patch)
2010-11-08 12:25 PST, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2010-11-08 12:25:46 PST
mitz
Comment 2 2010-11-08 13:03:33 PST
Comment on attachment 73266 [details] Patch r=me (with a renaming of IntPoint::transpose())
Dave Hyatt
Comment 3 2010-11-08 13:13:33 PST
Fixed in r71563.
WebKit Review Bot
Comment 4 2010-11-08 13:41:33 PST
http://trac.webkit.org/changeset/71563 might have broken Qt Linux Release The following tests are not passing: editing/selection/move-by-line-003.html fast/dom/Document/CaretRangeFromPoint/replace-element.html
Csaba Osztrogonác
Comment 5 2010-11-08 15:01:07 PST
(In reply to comment #4) > http://trac.webkit.org/changeset/71563 might have broken Qt Linux Release > The following tests are not passing: > editing/selection/move-by-line-003.html > fast/dom/Document/CaretRangeFromPoint/replace-element.html Not only the Qt bot, the whole world :(
Dave Hyatt
Comment 6 2010-11-08 15:59:00 PST
Fixed the Ruby issue. Regression test issue tracked in https://bugs.webkit.org/show_bug.cgi?id=49217
Note You need to log in before you can comment on or make changes to this bug.