https://bugs.webkit.org/show_bug.cgi?id=49126

Reviewed by Dan Bernstein.

RenderBlock::positionForPoint is not writing-mode aware.  Patch the function to examine lines in the correct
writing-mode direction.  Patched and renamed a number of helpers used by positionForPoint.

Fixed a bug with RenderReplaced's positionForPoint. There was a coordinate space mismatch between what the
function expected (local coordinates) and what was passed in (containing block coords), which meant the function didn't even work.

Fixed a bug with the propagation of selection state on RenderReplaced to its containing block.  The bit double propagated
because both the base class function and the derived class function did the propagation, and the setter function did not
do the right thing if this happened.

Patched the localSelectionRect method on RenderReplaced so that selection draws in the right place in all writing modes.

Added new tests of positionForPoint and replaced elements in fast/blockflow.

WebCore:

* editing/visible_units.cpp:
(WebCore::previousLinePosition):
(WebCore::nextLinePosition):
* platform/graphics/IntPoint.h:
(WebCore::IntPoint::transpose):
* rendering/InlineBox.cpp:
(WebCore::InlineBox::paint):
* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::nodeAtPoint):
(WebCore::RenderBlock::hitTestFloats):
(WebCore::positionForPointRespectingEditingBoundaries):
(WebCore::RenderBlock::positionForPointWithInlineChildren):
(WebCore::RenderBlock::positionForPoint):
* rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::positionForPoint):
(WebCore::RenderReplaced::localSelectionRect):
(WebCore::RenderReplaced::setSelectionState):
* rendering/RenderReplaced.h:
* rendering/RenderText.cpp:
(WebCore::RenderText::positionForPoint):
* rendering/RootInlineBox.cpp:
(WebCore::RootInlineBox::closestLeafChildForLogicalLeftPosition):
* rendering/RootInlineBox.h:

LayoutTests:

* fast/blockflow/horizontal-bt-replaced-selection.html: Added.
* fast/blockflow/vertical-lr-replaced-selection.html: Added.
* fast/blockflow/vertical-rl-replaced-selection.html: Added.
* platform/mac/fast/blockflow/horizontal-bt-replaced-selection-expected.checksum: Added.
* platform/mac/fast/blockflow/horizontal-bt-replaced-selection-expected.png: Added.
* platform/mac/fast/blockflow/horizontal-bt-replaced-selection-expected.txt: Added.
* platform/mac/fast/blockflow/vertical-lr-replaced-selection-expected.checksum: Added.
* platform/mac/fast/blockflow/vertical-lr-replaced-selection-expected.png: Added.
* platform/mac/fast/blockflow/vertical-lr-replaced-selection-expected.txt: Added.
* platform/mac/fast/blockflow/vertical-rl-replaced-selection-expected.checksum: Added.
* platform/mac/fast/blockflow/vertical-rl-replaced-selection-expected.png: Added.
* platform/mac/fast/blockflow/vertical-rl-replaced-selection-expected.txt: Added.



Canonical link: https://commits.webkit.org/62050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71563 268f45cc-cd09-0410-ab3c-d52691b4dbfc