WebCore/rendering/RootInlineBox.h
@@ -110,7 +110,7 @@ public:
 
     RenderBlock* block() const;
 
-    InlineBox* closestLeafChildForXPos(int x, bool onlyEditableLeaves = false);
+    InlineBox* closestLeafChildForLogicalLeftPosition(int, bool onlyEditableLeaves = false);
 
     Vector<RenderBox*>& floats()
     {
